--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -33,12 +33,10 @@
 
 @layer typography {
   body {
-    font-family:      var(--font-inter-variable);
-    font-weight:      var(--regular);
-    font-size:        var(--16px);
-    line-height:      var(--leading-normal);
-    color:            var(--text-primary);
-    background-color: var(--bg-color);
+    font-family:  var(--font-inter-variable);
+    font-weight:  var(--regular);
+    font-size:    var(--16px);
+    line-height:  var(--leading-normal);
   }
 
   h1, h2, h3 {
@@ -46,13 +44,14 @@
   }
 
   h1 {
-    font-size:    var(--32px);
-    font-weight:  var(--medium);
-    line-height:  var(--leading-packed);
-    margin-block: var(--24px);
+    font-size:      clamp(var(--32px), 3vw + var(--16px), var(--64px));
+    font-weight:    var(--medium);
+    letter-spacing: var(--tracking-tight);
+    line-height:    var(--leading-packed);
+    margin-block:   var(--24px);
   }
   h2 {
-    font-size:    var(--24px);
+    font-size:    clamp(var(--24px), 1.5vw + var(--14px), var(--32px));
     font-weight:  var(--regular);
     line-height:  var(--leading-normal);
     margin-block: var(--20px);
@@ -64,177 +63,4 @@
     margin-block: var(--16px);
   }
 
-
-  @media (--from-laptop) {
-    h1 {
-      font-size:    var(--64px);
-      margin-block: var(--48px);
-    }
-    h2 {
-      font-size:    var(--32px);
-      margin-block: var(--24px);
-    }
-  }
-}
-@layer fonts {
-  /* variable fonts */
-  @font-face {
-    font-family:  "InterVariable";
-    font-style:   normal;
-    font-weight:  100 900;
-    font-display: swap;
-    src:          url("../fonts/InterVariable.woff2") format("woff2");
-  }
-  @font-face {
-    font-family:  "InterVariable";
-    font-style:   italic;
-    font-weight:  100 900;
-    font-display: swap;
-    src:          url("../fonts/InterVariable-Italic.woff2") format("woff2");
-  }
-
-  /* static fonts */
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  100;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Thin.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  100;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-ThinItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  200;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-ExtraLight.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  200;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-ExtraLightItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  300;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Light.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  300;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-LightItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  400;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Regular.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  400;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Italic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  500;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Medium.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  500;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-MediumItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  600;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-SemiBold.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  600;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-SemiBoldItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  700;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Bold.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  700;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-BoldItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  800;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-ExtraBold.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  800;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-ExtraBoldItalic.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   normal;
-    font-weight:  900;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-Black.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-family:  "InterDisplay";
-    font-style:   italic;
-    font-weight:  900;
-    font-display: swap;
-    src:          url("../fonts/InterDisplay-BlackItalic.woff2") format("woff2");
-  }
 }
