--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -8,26 +8,30 @@
   align-items: center;
 
   min-height: 100svh;
-  padding: 24px;
-  gap: 32px;
+  gap: var(--32px);
+  padding-block: var(--24px);
+  padding-inline: var(--px-24);
 }
 
 .main {
   display: flex;
   flex-direction: column;
-  gap: 32px;
-  padding: 24px;
-  border-radius: 12px;
-  border: 1px solid var(--gray-alpha-200);
+  gap: var(--32px);
+  padding-block: var(--24px);
+  padding-inline: var(--px-24);
+  border-radius: var(--radius-12);
+  border: var(--border-1) solid var(--border-color);
 }
 
 @media (--from-tablet) {
   .page {
-    padding: 80px;
-    gap: 64px;
+    padding-block: var(--48px);
+    padding-inline: var(--px-80);
+    gap: var(--64px);
   }
 
   .main {
-    padding: 48px;
+    padding-block: var(--48px);
+    padding-inline: var(--px-48);
   }
 }
