--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -15,7 +15,7 @@
 
   body {
     color: var(--text-primary);
-    background-color: var(--surface-1);
+    background-color: var(--surface-canvas);
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
